Changelog
=========

In development
===============

-Fix: XML de-serialization crash if text fillers (spaces and/or black lines) are included between nodes. Closes #23.

v1.1.2
======

Released on March 2, 2019.

- New: IsEmpty method now also considers DateTime (Gaetano Pizzol). Pull #15.

v1.1.1
======

Released on January 16, 2019.

- Fix: XmlOptions.DecimalFormat should support up to 8 decimals (Claudio Lepri). Pull #15.

v1.1
====

Released on January 4, 2019.

- New: NetStandard 2.0 added to target frameworks (Federico Dipuma).
- New: Improve error handling in JSON deserialization (Emanuele Zavallone).

v1.0
====

Released on November 9, 2018.

- Bump Microsoft.NET.Test.Sdk from 15.8.0 to 15.9.0
- Bump Newtonsoft.Json from 10.0.3 to 11.0.2

v0.5
====

Released on November 5, 2018.

- Fix: `XmlOptions` is now protected, thus not de(serializable). Closes #8.

v0.4
====

Released on October 22, 2018.

- New: FromJson() method for JSON de-serialization
- New Add basic Json de-serialization test.
- New: Add basic XML de-serialization test.
- New: CI integration. Closes #3.
- Fix: Json: do not serialize the `XmlOptions` property.

v0.2
====

Released on October 1, 2018.

- Remove faulty WriteXml(string fileName) overload method. Will be replaced by FatturaElettronica.Extensions method.

v0.1
====

Rilasciata il 4.10.2017

- Prima release come core package.